--- a/_sass/color_schemes/customstyle.scss
+++ b/_sass/color_schemes/customstyle.scss
@@ -2,4 +2,4 @@ $grey-lt-000: #F5F5F5 !default;
 $blue-000: #4B9CD3 !default;
 
 $link-color: $blue-000;
-$sidebar-color: $grey-lt-000
+$sidebar-color: $grey-lt-000;
